# Ecommerce_Product_Auditing_System

./: README.md  pyproject.toml  requirements.txt
configs/: compliance_rules.yaml  grpo_train.yaml  prompts.yaml  rm_train.yaml  sft_train.yaml  taxonomy.yaml
scripts/: eval_offline.py  prepare_pref_data.py  prepare_sft_data.py  run_infer_demo.py  train_grpo.sh  train_rm.sh  train_sft.sh  validate_json_schema.py
src/ecommerce_audit/: __init__.py  metrics.py  postprocess.py  prompting.py  schema.py  service.py
src/ecommerce_audit/reward/: __init__.py  reward_functions.py  reward_model.py  train_rm_stub.py
tests/: test_data_pipeline.py  test_infer_json.py  test_reward.py  test_schema.py
